{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "52cd6cbb-475a-490e-8296-5194bbf4d28e",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "c0ea68f7-1b32-4f6f-9e34-b24d9fefefa0",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "5c2a2186-fd4e-4ceb-b053-7fc916848004",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Drop",
                    "type": "Button",
                    "id": "43c8b88b-a32f-4c08-9c21-bb8b93add3cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "2081d01c-c4b6-41b3-8eb6-48179a7752b2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Any",
                    "type": "Button",
                    "id": "22435667-2659-465a-b667-a04fd1073d43",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "AD[Keyboard]",
                    "id": "5bf6b580-66e3-40db-a03d-c6cec1af6885",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "61578755-9646-4b07-ab7e-7d957327ddfd",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "7e83fb18-4959-4151-8b47-c463eb99fc70",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left/Right[Keyboard]",
                    "id": "b55df7a7-2df5-4b18-969c-0dd9185e97a6",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "881bd8b4-e0db-4772-88e4-6cc00f9a040b",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "cddc3c2f-eca0-4c76-a4c2-d48cbcab760a",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a15d4e31-af55-4bbd-87fd-0fe406a809a7",
                    "path": "<Gamepad>/dpad/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90af7502-0268-4392-a85b-5a40369e580e",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "acd5541e-3f20-4237-8c70-81d2a7e239e9",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f460ef38-5bed-41d4-a583-dc81e3aaf2df",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "40bf7b4c-da0f-4a23-97b5-e4fcb4b831d1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "099f5935-4a99-4d1c-8211-d619a70d89a1",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b62b49b-5ce0-4267-83f7-471f400ab17b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a58308dd-2ecb-4f54-9997-7cc59cbc43a4",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "847b97c1-cdae-4c6c-afe3-21d055cfb442",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13c595d4-37e7-4500-95a8-ef64a1eae107",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c303c1a4-b1f6-42bc-9edb-ed2dc62965f7",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cbe432c3-4cb9-456d-af51-84c272cfce99",
                    "path": "<DualShockGamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "643adfe3-55f3-4a6b-8369-89bf2178e4d9",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Any",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cffd3feb-f973-4d7d-bf03-561f339189ce",
                    "path": "*/{Forward}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Any",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "04e4a77f-497f-4baf-99a5-e0791e935ec9",
                    "path": "*/{PrimaryAction}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Any",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c694bddb-3356-437e-9d01-63e0cdbaf0b2",
                    "path": "*/{Submit}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Any",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}